--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(40, 40, 40);
+
 }
 
 h1{
@@ -13,9 +14,22 @@ h1{
     height: 100%;
  }
 
+ #box1{
+
+        display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+
+ #box2{
+
+        display: flex;
+    align-items: center;
+    justify-content: center;
+ }
 
  img{
-    
+
     height: 400px;
     width: 385px;
     opacity: 65%;
