--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ body{
 }
 
 h1{
+    
     color: rgb(112, 112, 112);
     font-style: italic;
     font-family: cursive;
-    font-size:26px ;
+    font-size:100% ;
 }
  html,body{
     width: 100%;
@@ -17,23 +18,26 @@ h1{
  }
 
  #box1{
-
-        display: flex;
+    
+    display: flex;
     align-items: center;
     justify-content: center;
  }
 
  #box2{
-
-        display: flex;
+    margin-top: 100px;
+    display: flex;
     align-items: center;
     justify-content: center;
  }
 
  img{
 
-    height: 400px;
-    width: 385px;
+    height: 70%;
+    width: 20%;
     opacity: 65%;
+    border-style: ridge;
+    border-color: rgb(156, 156, 156);
+    border-radius: 50%;
 
  }
